fix overflow on project items

--- a/professional.css
+++ b/professional.css
@@ -237,7 +237,7 @@ header {
     position: relative;
     left: 50%;
     transform: translateX(-50%) !important;
-    width: 60%;
+    width: 70%;
     height: 250px;
     background: white;
     margin-top: 50px;
